--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
 <!-- Mobile Menu -->
 <div class="mobile-menu" id="mobileMenu">
     <a href="#" class="mobile-menu-item">Home</a>
-    <a href="#menu" class="mobile-menu-item">Menu</a>
+    <a href="menu.html" class="mobile-menu-item">Menu</a>
     <a href="#location" class="mobile-menu-item">Location</a>
     <a href="#contact" class="mobile-menu-item">Contact</a>
     <a href="#about" class="mobile-menu-item">About</a>
@@ -616,7 +616,7 @@
 <nav class="second-navbar" id="secondNav">
     <div class="nav-container">
         <a href="#" class="second-nav-item">Home</a>
-        <a href="#menu" class="second-nav-item">Menu</a>
+        <a href="menu.html" class="second-nav-item">Menu</a>
         <a href="#location" class="second-nav-item">Location</a>
         <a href="#contact" class="second-nav-item">Contact</a>
         <a href="#about" class="second-nav-item">About</a>
