--- a/menu.html
+++ b/menu.html
@@ -345,7 +345,7 @@
         }
 
         .menu-item-description {
-            font-family: 'EB Garamond', serif;
+            font-family: 'GeneralSans', sans-serif;
             font-size: 16px;
             color: #7B3500;
             line-height: 1.5;
@@ -617,8 +617,21 @@
                 font-size: 32px;
             }
 
+            .category-subtext {
+                font-size: 12px;
+                padding: 0 10px;
+            }
+
             .menu-item {
                 margin-bottom: 20px;
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .menu-item-content {
+                padding-right: 0;
+                margin-bottom: 8px;
+                width: 100%;
             }
 
             .menu-item-title {
@@ -631,6 +644,7 @@
 
             .menu-item-price {
                 font-size: 18px;
+                align-self: flex-start;
             }
 
             .faq-section {
@@ -968,6 +982,44 @@
                                 <div class="menu-item-description">Creamy mayo infused with smoky chipotle peppers.</div>
                             </div>
                             <div class="menu-item-price">$3.00</div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sweets -->
+                <div class="category-section" id="sweets">
+                    <div class="category-header">
+                        <h2>Sweet Endings</h2>
+                        <div class="category-divider"></div>
+                    </div>
+                    <div class="menu-list">
+                        <div class="menu-item">
+                            <div class="menu-item-content">
+                                <div class="menu-item-header">
+                                    <div class="menu-item-title">Vanilla Soft Serve</div>
+                                </div>
+                                <div class="menu-item-description">Handcrafted Beef Patty • American Cheese • Signature Sauce • Homemade Bun</div>
+                            </div>
+                            <div class="menu-item-price">$2.90</div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-item-content">
+                                <div class="menu-item-header">
+                                    <div class="menu-item-title">Banana and Chocolate Pie</div>
+                                    <img src="smalllogo.png" alt="Burgs Special" class="menu-item-logo">
+                                </div>
+                                <div class="menu-item-description">Fried Chicken Thigh • Cheese Sauce • Twisties • Homemade Bun</div>
+                            </div>
+                            <div class="menu-item-price">$3.90</div>
+                        </div>
+                        <div class="menu-item">
+                            <div class="menu-item-content">
+                                <div class="menu-item-header">
+                                    <div class="menu-item-title">Cinnaburg</div>
+                                </div>
+                                <div class="menu-item-description">Smoked Beef Brisket • American Cheese • Homemade BBQ Sauce • Homemade Bun</div>
+                            </div>
+                            <div class="menu-item-price">$3.90</div>
                         </div>
                     </div>
                 </div>
