--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
      <h3>Crafted With <span style="color:#EE202E;">Passion</span></h3>
         <p>At Burgs, we believe in creating the perfect burger experience. Every patty is made from premium, locally-sourced beef, grilled to perfection, and served on our signature brioche buns. Our commitment to quality ingredients and bold flavors sets us apart. We take pride in every burger that leaves our kitchen, ensuring that each bite is a memorable experience.</p>
     </div>
-    <div class="content-image fade-in" style="background-image: url('https://images.unsplash.com/photo-1550547660-d9450f859349?w=800&h=600&fit=crop');"></div>
+    <div class="content-image fade-in" style="background-image: url('picture3.jpg');"></div>
 </section>
 
 <!-- Scrolling Banner -->
@@ -734,7 +734,7 @@
 
 <!-- Content Section 2 -->
 <section class="content-section" style="background: #EE202E;">
-    <div class="content-image fade-in" style="background-image: url('https://images.unsplash.com/photo-1568901346375-23c9450c58cd?w=800&h=600&fit=crop');"></div>
+    <div class="content-image fade-in" style="background-image: url('picture1.jpg');"></div>
     <div class="content-text text-right fade-in" style="color: #FCFAED;">        
         <h3><span style="color:#FFD549;">Quality</span> You Can Taste</h3>
         <p>Our secret lies in the details. From hand-selecting the finest ingredients to perfecting our proprietary sauce blend, we never compromise on quality. Each burger is crafted with care, cooked to order, and served fresh. We believe that great food starts with great ingredients, and that's why we partner with local farmers and suppliers who share our commitment to excellence.</p>
