--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 <body>
 <!-- Top Navbar -->
 <nav class="top-navbar">
-    <a href="#about" class="top-nav-item">About Us</a>
+    <a href="about.html" class="top-nav-item">About Us</a>
     <a href="#" onclick="window.scrollTo(0,0)"><img src="textlogo.png" alt="BURGS" class="logo"></a>
     <a href="#order" class="top-nav-item">Order Now</a>
     <button class="hamburger" id="hamburger">☰</button>
