--- a/menu.html
+++ b/menu.html
@@ -706,7 +706,7 @@
             <a href="menu.html" class="second-nav-item">Menu</a>
             <a href="#location" class="second-nav-item">Location</a>
             <a href="#contact" class="second-nav-item">Contact</a>
-            <a href="index.html#about" class="second-nav-item">About</a>
+            <a href="about.html" class="second-nav-item">About</a>
             <a href="#order" class="second-nav-item">Order Now</a>
         </div>
     </nav>
